Add GSetting for candidate encodings
It's better to share that gsetting for all text editors. If a user adds
an encoding with one text editor, chances are that the user also has
files with that encoding that needs to be opened with another text
editor.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = gtef po tests testsuite docs
+SUBDIRS = data gtef po tests testsuite docs
 
 pkgconfig_DATA = gtef-$(GTEF_API_VERSION).pc
 DISTCLEANFILES = $(pkgconfig_DATA)
@@ -36,6 +36,7 @@ MAINTAINERCLEANFILES = \
 	m4/gettext.m4 \
 	m4/glibc21.m4 \
 	m4/glibc2.m4 \
+	m4/gsettings.m4 \
 	m4/gtk-doc.m4 \
 	m4/iconv.m4 \
 	m4/intdiv0.m4 \
